# stat_projects

./: .gitignore  Untitled.ipynb  dynamics_series.xlsx  numpy.ipynb  pandas.ipynb  pyproject.toml  python_stat.ipynb  series_tasks.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  numpy-checkpoint.ipynb  pandas-checkpoint.ipynb  python_stat-checkpoint.ipynb  series_tasks-checkpoint.ipynb
economics_of_organization/: Untitled.ipynb  depreciation_1.ipynb  financial_strength_6.ipynb  good_expenses_2.ipynb  main.ipynb  min_working_capital_3.ipynb  organization.md  property_using_efficiency_5.ipynb  resume.ipynb  revenue_and_efficiency_4.ipynb  source.csv  tech_spec.md
economics_of_organization/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
economics_of_organization/exam_preparation/: efficiency.ipynb  expenses.ipynb  main_capital.ipynb  working_capital.ipynb
main_objects/: matplotlib.ipynb  numpy.ipynb  pandas.ipynb
stat_methods/: dynamics_series.ipynb  practice.ipynb  python_stat.ipynb
