[tool.poetry]
name = "stat-projects"
version = "0.1.0"
description = ""
authors = ["luculliano <vederecento@gmail.com>"]
readme = "README.md"
packages = [{include = "stat_projects"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
jupyterthemes = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
